<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/book_img_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/book_title_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/book_img_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_author_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/author_colon"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/book_img_list"
        app:layout_constraintTop_toBottomOf="@+id/book_title_item" />

    <TextView
        android:id="@+id/book_author_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/author"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/book_author_list"
        app:layout_constraintTop_toBottomOf="@+id/book_title_item" />

    <TextView
        android:id="@+id/book_country_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/country_colon"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/book_img_list"
        app:layout_constraintTop_toBottomOf="@+id/book_author_list" />

    <TextView
        android:id="@+id/book_country_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/book_country_list"
        app:layout_constraintTop_toBottomOf="@+id/book_author_list" />

    <TextView
        android:id="@+id/book_language_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/language_colon"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/book_img_list"
        app:layout_constraintTop_toBottomOf="@+id/book_country_list" />

    <TextView
        android:id="@+id/book_language_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/book_language_list"
        app:layout_constraintTop_toBottomOf="@+id/book_country_item" />

</androidx.constraintlayout.widget.ConstraintLayout>